--- a/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,13 +20,14 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
-              [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li *ngIf="!userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/users/register']">Register</a>
+          </li>
+          <li *ngIf="!userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/users/login']">Log in</a>
+          </li>
+          <li *ngIf="userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/']" (click)="userService.logout()">Log out</a>
           </li>
         </ul>
       </div>
