--- a/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -26,6 +26,9 @@
           <li *ngIf="!userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/users/login']">Log in</a>
           </li>
+          <li *ngIf="userService.authorizedUser() && authorizedUser" class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/']"> {{authorizedUser.Email}}</a>
+          </li>
           <li *ngIf="userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/']" (click)="userService.logout()">Log out</a>
           </li>
