Multi language: merge, edit translation (xliffmerge)

--- a/SmartEcoA/ClientApp/src/app/locale/index.component.html
+++ b/SmartEcoA/ClientApp/src/app/locale/index.component.html
@@ -1,5 +1,5 @@
 <div class="jumbtron">
-  <h1>Language</h1>
+  <h1 i18n="@@Language">Language</h1>
   <mat-list *ngFor="let language of languages">
     <mat-list-item><a href="/{{language.code}}/">{{language.name}}</a></mat-list-item>
   </mat-list>
