--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -1,6 +1,7 @@
 <h1 i18n="@@Administration"></h1>
-<a class="btn" [routerLink]="['/users']" matTooltip="Users">
-  <i class="material-icons">people_alt</i> Users
+<a i18n-matTooltip="@@Users" class="btn" [routerLink]="['/users']" matTooltip="Users">
+  <i class="material-icons">people_alt</i>
+  <span i18n="@@Users">Users</span>
 </a>
 <a i18n-matTooltip="@@PollutionEnvironments" class="btn" [routerLink]="['/pollutionenvironments']" matTooltip="Pollution Environments">
   <span i18n="@@PollutionEnvironments">Pollution Environments</span>
