--- a/SmartEcoA/ClientApp/src/app/users/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/details.component.html
@@ -1,16 +1,16 @@
 <mat-card>
-  <mat-card-title>User details</mat-card-title>
+  <mat-card-title i18n="@@UserDetails">User details</mat-card-title>
   <mat-card-content>
     <dl>
-      <dt>User email</dt>
+      <dt i18n="@@UserEmail">User email</dt>
       <dd>{{user?.Email}}</dd>
     </dl>
     <dl>
-      <dt>User roles</dt>
+      <dt i18n="@@UserRoles">User roles</dt>
       <dd>{{user?.Roles}}</dd>
     </dl>
   </mat-card-content>
   <mat-card-actions>
-    <a class="btn" [routerLink]="['/users']" matTooltip="Back"><i class="material-icons">arrow_back</i></a>
+    <a i18n-matTooltip="@@Back" class="btn" [routerLink]="['/users']" matTooltip="Back"><i class="material-icons">arrow_back</i></a>
   </mat-card-actions>
 </mat-card>
