--- a/SmartEcoA/ClientApp/src/app/users/edit.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/edit.component.html
@@ -1,13 +1,13 @@
 <mat-card>
-  <mat-card-title>Edit user</mat-card-title>
+  <mat-card-title i18n="@@EditUser">Edit user</mat-card-title>
   <form [formGroup]="userForm" autocomplete="off" novalidate (ngSubmit)="save(userForm.getRawValue())">
     <mat-card-content>
       <mat-form-field>
-        <input matInput type="text" placeholder="Email" formControlName="Email" id="email">
+        <input i18n-placeholder="@@Email" matInput type="text" placeholder="Email" formControlName="Email" id="email">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input matInput type="text" placeholder="Roles" id="roles" formControlName="Roles" hidden="hidden">
+        <input i18n-placeholder="@@Roles" matInput type="text" placeholder="Roles" id="roles" formControlName="Roles" hidden="hidden">
         <mat-selection-list #RolesSelected formControlName="RolesSelected">
           <mat-list-option *ngFor="let role of selectedRoles" [value]="role.Name" [selected]="role.Selected">
             {{role.Name}}
@@ -16,8 +16,8 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="center">
-      <button mat-raised-button color="primary" [disabled]="!userForm.valid">Save</button>
-      <button type="button" mat-raised-button color="warn" (click)="cancel()">Cancel</button>
+      <button i18n="@@Save" mat-raised-button color="primary" [disabled]="!userForm.valid">Save</button>
+      <button i18n="@@Cancel" type="button" mat-raised-button color="warn" (click)="cancel()">Cancel</button>
     </mat-card-actions>
   </form>
 </mat-card>
