--- a/SmartEcoA/ClientApp/src/app/users/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/list.component.html
@@ -1,25 +1,25 @@
-<a class="btn" [routerLink]="['/users/register']" matTooltip="Register"><i class="material-icons">add</i></a>
+<a i18n-matTooltip="@@Register" class="btn" [routerLink]="['/users/register']" matTooltip="Register"><i class="material-icons">add</i></a>
 
 <mat-form-field>
-  <input matInput type="text" (keyup)="filter($event.target.value)" placeholder="Filter">
+  <input i18n-placeholder="@@Filter" matInput type="text" (keyup)="filter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort class="table">
   <tr>
     <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+      <th i18n="@@Email" mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let item">{{item.Email}}</td>
     </ng-container>
     <ng-container matColumnDef="Roles">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Roles</th>
+      <th i18n="@@Roles" mat-header-cell *matHeaderCellDef mat-sort-header>Roles</th>
       <td mat-cell *matCellDef="let item">{{item.Roles}}</td>
     </ng-container>
     <ng-container matColumnDef="details-edit-delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let item">
-        <a class="btn" [routerLink]="['/users', item.Id]" matTooltip="Details"><i class="material-icons">info</i></a>
-        <a class="btn" [routerLink]="['/users/edit', item.Id]" matTooltip="Edit"><i class="material-icons">edit</i></a>
-        <a class="btn" matTooltip="Delete" (click)="delete(item.Id)"><i class="material-icons">delete</i></a>
+        <a i18n-matTooltip="@@Details" class="btn" [routerLink]="['/users', item.Id]" matTooltip="Details"><i class="material-icons">info</i></a>
+        <a i18n-matTooltip="@@Edit" class="btn" [routerLink]="['/users/edit', item.Id]" matTooltip="Edit"><i class="material-icons">edit</i></a>
+        <a i18n-matTooltip="@@Delete" class="btn" matTooltip="Delete" (click)="delete(item.Id)"><i class="material-icons">delete</i></a>
       </td>
     </ng-container>
   </tr>
