--- a/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -33,7 +33,7 @@
             <a i18n="@@LogIn" class="nav-link text-dark" [routerLink]="['/users/login']">Log in</a>
           </li>
           <li *ngIf="userService.authorizedUser() && authorizedUser" class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/']"> {{authorizedUser.Email}}</a>
+            <a class="nav-link text-dark" [routerLink]="['/users/changepassword']"> {{authorizedUser.Email}}</a>
           </li>
           <li *ngIf="userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
             <a i18n="@@LogOut" class="nav-link text-dark" [routerLink]="['/']" (click)="userService.logout()">Log out</a>
