--- a/SmartEcoA/ClientApp/src/app/app.component.html
+++ b/SmartEcoA/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
-<body>
-  <app-nav-menu></app-nav-menu>
+<!--<body>
+  <app-nav></app-nav>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
-</body>
+</body>-->
+<app-nav></app-nav>
