--- a/SmartEcoA/ClientApp/src/app/users/changepassword.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/changepassword.component.html
@@ -1,5 +1,5 @@
-<h1 i18n="@@ChangePassword">Change password</h1>
-<div class="row">
+<div class="jumbtron">
+  <h1 i18n="@@ChangePassword">Change password</h1>
   <div class="col-md-4">
     <form [formGroup]=" userService.formChangePasswordModel" autocomplete="off" (submit)="changePassword()">
       <h4 i18n="@@ChangePassword">Change password.</h4>
