--- a/SmartEcoA/ClientApp/src/app/users/login.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/login.component.html
@@ -1,5 +1,5 @@
-<h1 i18n="@@LogIn">Log in</h1>
-<div class="row">
+<div class="jumbtron">
+  <h1 i18n="@@LogIn">Log in</h1>
   <div class="col-md-4">
     <form #form='ngForm' autocomplete="off" (submit)="login(form)">
       <h4 i18n="@@UseYourEmailAndPasswordToLogIn">Use your email and password to log in.</h4>
