--- a/SmartEcoA/ClientApp/src/app/users/register.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/register.component.html
@@ -1,5 +1,5 @@
-<h1 i18n="@@Register">Register</h1>
-<div class="row">
+<div class="jumbtron">
+  <h1 i18n="@@Register">Register</h1>
   <div class="col-md-4">
     <form [formGroup]=" userService.formRegisterModel" autocomplete="off" (submit)="register()">
       <h4 i18n="@@CreateANewAccount">Create a new account.</h4>
