--- a/SmartEcoA/ClientApp/src/styles.css
+++ b/SmartEcoA/ClientApp/src/styles.css
@@ -21,3 +21,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .material-icons {
   vertical-align: middle;
 }
+
+.jumbtron {
+  margin: 15px;
+}
