--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -6,3 +6,6 @@
 <a i18n-matTooltip="@@PollutionEnvironments" class="btn" [routerLink]="['/pollutionenvironments']" matTooltip="Pollution Environments">
   <span i18n="@@PollutionEnvironments">Pollution Environments</span>
 </a>
+<a i18n-matTooltip="@@MeasuredParameters" class="btn" [routerLink]="['/measuredparameters']" matTooltip="Measured Parameters">
+  <span i18n="@@MeasuredParameters">Measured Parameters</span>
+</a>
