--- a/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
@@ -2,7 +2,7 @@
   <mat-card-title i18n="@@MeasuredParameterDetails">Measured Parameter details</mat-card-title>
   <mat-card-content>
     <dl>
-      <dt i18n="@@MeasuredParameterName">Measured Parameter name</dt>
+      <dt i18n="@@Name">Name</dt>
       <dd>{{measuredparameter?.Name}}</dd>
       <dt i18n="@@MPCDailyAverage">MPC Daily Average</dt>
       <dd>{{measuredparameter?.MPCDailyAverage}}</dd>
