--- a/SmartEcoA/ClientApp/src/app/pollutionenvironments/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/pollutionenvironments/details.component.html
@@ -2,7 +2,7 @@
   <mat-card-title i18n="@@PollutionEnvironmentDetails">Pollution Environment details</mat-card-title>
   <mat-card-content>
     <dl>
-      <dt i18n="@@PollutionEnvironmentName">Pollution Environment name</dt>
+      <dt i18n="@@Name">Name</dt>
       <dd>{{pollutionenvironment?.Name}}</dd>
     </dl>
   </mat-card-content>
