--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -9,3 +9,6 @@
 <a i18n-matTooltip="@@MeasuredParameters" class="btn" [routerLink]="['/measuredparameters']" matTooltip="Measured Parameters">
   <span i18n="@@MeasuredParameters">Measured Parameters</span>
 </a>
+<a i18n-matTooltip="@@DataProviders" class="btn" [routerLink]="['/dataproviders']" matTooltip="Data Providers">
+  <span i18n="@@DataProviders">Data Providers</span>
+</a>
