--- a/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,7 +23,7 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/locale']"><i class="material-icons">language</i> {{currentLanguage}}</a>
           </li>
-          <li *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator'])" class="nav-item" [routerLinkActive]="['link-active']">
+          <li *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator', 'Moderator'])" class="nav-item" [routerLinkActive]="['link-active']">
             <a i18n="@@Administration" class="nav-link text-dark" [routerLink]="['/administration']">Administration</a>
           </li>
           <li *ngIf="!userService.authorizedUser()" class="nav-item" [routerLinkActive]="['link-active']">
