--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -12,3 +12,6 @@
 <a i18n-matTooltip="@@DataProviders" class="btn" [routerLink]="['/dataproviders']" matTooltip="Data Providers">
   <span i18n="@@DataProviders">Data Providers</span>
 </a>
+<a i18n-matTooltip="@@Projects" class="btn" [routerLink]="['/projects']" matTooltip="Projects">
+  <span i18n="@@Projects">Projects</span>
+</a>
