--- a/SmartEcoA/ClientApp/src/app/users/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/details.component.html
@@ -10,7 +10,7 @@
       <dd>{{user?.Roles}}</dd>
     </dl>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions align="center">
     <a i18n-matTooltip="@@Back" class="btn" [routerLink]="['/users']" matTooltip="Back"><i class="material-icons">arrow_back</i></a>
   </mat-card-actions>
 </mat-card>
