--- a/SmartEcoA/ClientApp/src/app/users/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/list.component.html
@@ -12,7 +12,7 @@
   </mat-expansion-panel-header>
   <p>Пользователи с ролью "Administrator" имеют доступ к панели управления, администрированию.</p>
   <p>Пользователи с ролью "Moderator" имеют доступ к панели управления, администрированию (кроме данных пользователей).</p>
-  <p>Пользователи с ролью "Customer" имеют доступ к панели управления, а также к данным проектов на панели управления, которые соответсвуют их ролям.</p>
+  <p>Пользователи с ролью "Customer" имеют доступ к панели управления, а также к данным проектов на панели управления, которые соответствуют их ролям.</p>
 </mat-expansion-panel>
 
 <table mat-table [dataSource]="dataSource" matSort class="table">
