--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -1,17 +1,24 @@
 <h1 i18n="@@Administration"></h1>
-<a i18n-matTooltip="@@Users" *ngIf="userService.allowedRole(['Administrator'])" class="btn" [routerLink]="['/users']" matTooltip="Users">
-  <i class="material-icons">people_alt</i>
-  <span i18n="@@Users">Users</span>
-</a>
-<a i18n-matTooltip="@@PollutionEnvironments" class="btn" [routerLink]="['/pollutionenvironments']" matTooltip="Pollution Environments">
-  <span i18n="@@PollutionEnvironments">Pollution Environments</span>
-</a>
-<a i18n-matTooltip="@@MeasuredParameters" class="btn" [routerLink]="['/measuredparameters']" matTooltip="Measured Parameters">
-  <span i18n="@@MeasuredParameters">Measured Parameters</span>
-</a>
-<a i18n-matTooltip="@@DataProviders" class="btn" [routerLink]="['/dataproviders']" matTooltip="Data Providers">
-  <span i18n="@@DataProviders">Data Providers</span>
-</a>
-<a i18n-matTooltip="@@Projects" class="btn" [routerLink]="['/projects']" matTooltip="Projects">
-  <span i18n="@@Projects">Projects</span>
-</a>
+
+<mat-tab-group>
+  <mat-tab i18n-label="@@Users" label="Users" *ngIf="userService.allowedRole(['Administrator'])">
+    <a i18n-matTooltip="@@Users" class="btn" [routerLink]="['/users']" matTooltip="Users">
+      <i class="material-icons">people_alt</i>
+      <span i18n="@@Users">Users</span>
+    </a>
+  </mat-tab>
+  <mat-tab i18n-label="@@Directories" label="Directories">
+    <a i18n-matTooltip="@@PollutionEnvironments" class="btn" [routerLink]="['/pollutionenvironments']" matTooltip="Pollution Environments">
+      <span i18n="@@PollutionEnvironments">Pollution Environments</span>
+    </a>
+    <a i18n-matTooltip="@@MeasuredParameters" class="btn" [routerLink]="['/measuredparameters']" matTooltip="Measured Parameters">
+      <span i18n="@@MeasuredParameters">Measured Parameters</span>
+    </a>
+    <a i18n-matTooltip="@@DataProviders" class="btn" [routerLink]="['/dataproviders']" matTooltip="Data Providers">
+      <span i18n="@@DataProviders">Data Providers</span>
+    </a>
+    <a i18n-matTooltip="@@Projects" class="btn" [routerLink]="['/projects']" matTooltip="Projects">
+      <span i18n="@@Projects">Projects</span>
+    </a>
+  </mat-tab>
+</mat-tab-group>
