--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -21,4 +21,9 @@
       <span i18n="@@Projects">Projects</span>
     </a>
   </mat-tab>
+  <mat-tab i18n-label="@@Data" label="Data">
+    <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/posts']" matTooltip="Monitoring Posts">
+      <span i18n="@@Posts">Monitoring Posts</span>
+    </a>
+  </mat-tab>
 </mat-tab-group>
