--- a/SmartEcoA/ClientApp/src/app/users/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/users/list.component.html
@@ -4,10 +4,10 @@
   <input i18n-placeholder="@@Filter" matInput type="text" (keyup)="filter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
-<mat-expansion-panel hideToggle>
+<mat-expansion-panel>
   <mat-expansion-panel-header>
     <mat-panel-title>
-      <i i18n-matTooltip="@@Info" class="material-icons" matTooltip="Information">info</i>
+      <i i18n-matTooltip="@@Information" class="material-icons" matTooltip="Information">info</i>
     </mat-panel-title>
   </mat-expansion-panel-header>
   <p>Пользователи с ролью "Administrator" имеют доступ к панели управления, администрированию.</p>
