--- a/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
@@ -10,6 +10,8 @@
       <dd>{{measuredparameter?.MPCMaxOneTime}}</dd>
       <dt i18n="@@OceanusCode">Oceanus Code</dt>
       <dd>{{measuredparameter?.OceanusCode}}</dd>
+      <dt i18n="@@OceanusCoefficient">Oceanus Coefficient</dt>
+      <dd>{{measuredparameter?.OceanusCoefficient}}</dd>
       <dt i18n="@@KazhydrometCode">Kazhydromet Code</dt>
       <dd>{{measuredparameter?.KazhydrometCode}}</dd>
     </dl>
