--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -25,5 +25,8 @@
     <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/posts']" matTooltip="Monitoring Posts">
       <span i18n="@@Posts">Monitoring Posts</span>
     </a>
+    <a i18n-matTooltip="@@PostDatas" class="btn" [routerLink]="['/postdatas']" matTooltip="Post Data">
+      <span i18n="@@PostDatas">Post Data</span>
+    </a>
   </mat-tab>
 </mat-tab-group>
