PostData: list: spinner

--- a/SmartEcoA/ClientApp/src/app/postdatas/list.component.css
+++ b/SmartEcoA/ClientApp/src/app/postdatas/list.component.css
@@ -36,3 +36,7 @@ tr.expanded-row {
   .expanded-table tr:first-child th, tr:first-child td {
     border-top-style: none;
   }
+
+mat-spinner {
+  margin: 0 auto;
+}
