--- a/SmartEcoA/ClientApp/src/app/nav/nav.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>SmartEcoA</span>
+      <span>SmartEcoA (2021.01.11)</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
