--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -28,5 +28,8 @@
     <a i18n-matTooltip="@@PostDatas" class="btn" [routerLink]="['/postdatas']" matTooltip="Post Data">
       <span i18n="@@PostDatas">Post Data</span>
     </a>
+    <a i18n-matTooltip="@@PostDataDivideds" class="btn" [routerLink]="['/postdatadivideds']" matTooltip="Post Data Divided">
+      <span i18n="@@PostDataDivideds">Post Data Divided</span>
+    </a>
   </mat-tab>
 </mat-tab-group>
