PostDataDivided: DateTime from PostData

--- a/SmartEcoA/ClientApp/src/app/postdatadivideds/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/postdatadivideds/details.component.html
@@ -2,6 +2,8 @@
   <mat-card-title i18n="@@PostDataDividedDetails">Post Data Divided details</mat-card-title>
   <mat-card-content>
     <dl>
+      <dt i18n="@@DateTime">DateTime</dt>
+      <dd>{{postdatadivided?.PostData?.DateTime}}</dd>
       <dt>MN</dt>
       <dd>{{postdatadivided?.MN}}</dd>
       <dt i18n="@@OceanusCode">OceanusCode</dt>
