--- a/SmartEcoA/ClientApp/src/app/postdatadivideds/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/postdatadivideds/list.component.html
@@ -13,6 +13,11 @@
 
 <table [style.display]="!spinner ? 'table' : 'none'" mat-table [dataSource]="dataSource" matSort class="table" multiTemplateDataRows>
   <tr>
+    <ng-container matColumnDef="DateTime">
+      <th i18n="@@DateTime" mat-header-cell *matHeaderCellDef mat-sort-header>Date and Time</th>
+      <td mat-cell *matCellDef="let item">{{item.PostData.DateTime}}</td>
+    </ng-container>
+
     <ng-container matColumnDef="MN">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>MN</th>
       <td mat-cell *matCellDef="let item">{{item.MN}}</td>
@@ -39,6 +44,10 @@
       <td mat-cell *matCellDef="let item" [attr.colspan]="columns.length" class="expanded-td">
         <div class="expanded-div" [@expandTrigger]="item == expandedItem ? 'expanded' : 'collapsed'">
           <table class="table expanded-table">
+            <tr>
+              <th i18n="@@DateTime">Date and Time</th>
+              <td>{{item.PostData.DateTime}}</td>
+            </tr>
             <tr>
               <th>MN</th>
               <td>{{item.MN}}</td>
