PostDataDivided: Details: Add link to PostData

--- a/SmartEcoA/ClientApp/src/app/postdatadivideds/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/postdatadivideds/details.component.html
@@ -10,6 +10,8 @@
       <dd>{{postdatadivided?.OceanusCode}}</dd>
       <dt i18n="@@Value">Value</dt>
       <dd>{{postdatadivided?.Value}}</dd>
+      <dt i18n="@@PostData">Post Data</dt>
+      <dd><a i18n="@@PostData" href="postdatas/{{postdatadivided?.PostData?.Id}}">Post Data</a></dd>
     </dl>
   </mat-card-content>
   <mat-card-actions align="center">
