--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -21,7 +21,7 @@
       <span i18n="@@Projects">Projects</span>
     </a>
   </mat-tab>
-  <mat-tab i18n-label="@@Data" label="Data">
+  <mat-tab i18n-label="@@Posts" label="Monitoring Posts">
     <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/posts']" matTooltip="Monitoring Posts">
       <span i18n="@@Posts">Monitoring Posts</span>
     </a>
@@ -30,6 +30,11 @@
     </a>
     <a i18n-matTooltip="@@PostDataDivideds" class="btn" [routerLink]="['/postdatadivideds']" matTooltip="Post Data Divided">
       <span i18n="@@PostDataDivideds">Post Data Divided</span>
+    </a>
+  </mat-tab>
+  <mat-tab i18n-label="@@CarPosts" label="Car Posts">
+    <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/carposts']" matTooltip="Car Posts">
+      <span i18n="@@CarPosts">Car Posts</span>
     </a>
   </mat-tab>
 </mat-tab-group>
