--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,40 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 
+<mat-tab-group>
+  <mat-tab i18n-label="@@Posts" label="Monitoring Posts">
+    
+  </mat-tab>
+</mat-tab-group>
 <div class="grid-container">
-  <h1 i18n="@@Dashboard" class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2" rowHeight="400px">
+  <!--<h1 i18n="@@Dashboard" class="mat-h1">Dashboard</h1>-->
+  <mat-grid-list cols="2" rowHeight="500px">
+
     <mat-grid-tile [colspan]="1" [rowspan]="1">
       <mat-card class="dashboard-card">
         <mat-card-content class="dashboard-card-content">
-          <div id="map" class="map"></div>
+          <div id="map" class="map" style="height: 440px; min-width: 300px;"></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
 
     <mat-grid-tile [colspan]="1" [rowspan]="1">
       <mat-card class="dashboard-card" style="overflow: auto;">
+        <!--<mat-card-header>
+          <mat-card-title>
+            Title
+            <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu" xPosition="before">
+              <button mat-menu-item>Expand</button>
+              <button mat-menu-item>Remove</button>
+            </mat-menu>
+          </mat-card-title>
+        </mat-card-header>-->
         <pollutionenvironments></pollutionenvironments>
       </mat-card>
     </mat-grid-tile>
+
   </mat-grid-list>
 </div>
