--- a/SmartEcoA/ClientApp/src/app/nav/nav.component.html
+++ b/SmartEcoA/ClientApp/src/app/nav/nav.component.html
@@ -1,31 +1,24 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar i18n="@@Menu">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item class="nav-link text-dark" [routerLink]="['/locale']"><i class="material-icons">language</i> {{currentLanguage}}</a>
-      <a i18n="@@Administration" *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator', 'Moderator'])" mat-list-item class="nav-link text-dark" [routerLink]="['/administration']">Administration</a>
-      <a i18n="@@Dashboard" *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator', 'Moderator', 'Customer'])" mat-list-item class="nav-link text-dark" [routerLink]="['/dashboard']">Dashboard</a>
-      <a i18n="@@Register" *ngIf="!userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/users/register']">Register</a>
-      <a i18n="@@LogIn" *ngIf="!userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/users/login']">Log in</a>
-      <a *ngIf="userService.authorizedUser() && authorizedUser" mat-list-item class="nav-link text-dark" [routerLink]="['/users/changepassword']"> {{authorizedUser.Email}}</a>
-      <a i18n="@@LogOut" *ngIf="userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/']" (click)="userService.logout()">Log out</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>SmartEcoA (2021.01.25)</span>
-    </mat-toolbar>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="div-container">
+  <mat-toolbar color="primary" class="toolbar">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="app-name">SmartEcoA (2021.01.30)</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #snav>
+      <mat-nav-list>
+        <a mat-list-item class="nav-link text-dark" [routerLink]="['/locale']"><i class="material-icons">language</i> {{currentLanguage}}</a>
+        <a i18n="@@Administration" *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator', 'Moderator'])" mat-list-item class="nav-link text-dark" [routerLink]="['/administration']">Administration</a>
+        <a i18n="@@Dashboard" *ngIf="userService.authorizedUser() && userService.allowedRole(['Administrator', 'Moderator', 'Customer'])" mat-list-item class="nav-link text-dark" [routerLink]="['/dashboard']">Dashboard</a>
+        <a i18n="@@Register" *ngIf="!userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/users/register']">Register</a>
+        <a i18n="@@LogIn" *ngIf="!userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/users/login']">Log in</a>
+        <a *ngIf="userService.authorizedUser() && authorizedUser" mat-list-item class="nav-link text-dark" [routerLink]="['/users/changepassword']"> {{authorizedUser.Email}}</a>
+        <a i18n="@@LogOut" *ngIf="userService.authorizedUser()" mat-list-item class="nav-link text-dark" [routerLink]="['/']" (click)="userService.logout()">Log out</a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
